<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/background_material_dark"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/feedback_header"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp"
        android:text="@string/feedback_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

   <Button
       android:text="@string/price_high"
       android:layout_below="@+id/feedback_header"
       android:id="@+id/price_high"
       android:layout_width="match_parent"
       android:layout_marginBottom="5dp"
       android:layout_height="75dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:text="@string/price_low"
        android:id="@+id/price_low"
        android:layout_below="@+id/price_high"
        android:layout_height="75dp"/>

    <Button
        android:layout_below="@+id/price_low"
        android:text="@string/accessible_high"
        android:layout_width="match_parent"
        android:id="@+id/accessible_high"
        android:layout_marginBottom="5dp"
        android:layout_height="75dp"/>

    <Button
        android:id="@+id/accessible_low"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/accessible_high"
        android:text="@string/accessible_low"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="75dp"/>

    <Button
        android:text="@string/education_low"
        android:layout_below="@id/accessible_low"
        android:id="@+id/education_low"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"/>

    <Button
        android:text="@string/transportation_high"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/education_low"
        android:id="@+id/transportation_high"
        android:layout_width="match_parent"
        android:layout_height="75dp"/>



</RelativeLayout>